Poprawki wynikające z feedbacku promotora